add header+title background

--- a/app/index.html
+++ b/app/index.html
@@ -24,40 +24,50 @@
 			<div class="header__container">
 		
 				<div class="header__logo">
-					<a href="index.html"><img src="img/logo.svg" alt="logo" width="160" height="75"></a>
+					<!-- <a href="index.html"><img src="img/logo.svg" alt="logo" width="160" height="75"></a> -->
+					<h2>ЮРИДИЧЕСКОЕ АГЕНСТВО</h2>
+					<h4>Бракоразводный процесс с 2004г.</h4>
 				</div>
 
-				<button class="hamburger" type="button">
+				<!-- <button class="hamburger" type="button">
 					<span class="hamburger__box">
 						<span class="hamburger__item"></span>
 					</span>
-				</button>
-
+				</button> -->
 				<nav class="nav">
 					<ul>
-						<li><a href="index.html" class="link">Головна</a></li>
-						<li><a href="catalog.html" class="link">Наші послуги</a></li>
-						<li><a href="about.html" class="link">Виконанні роботи</a></li>
-						<li><a href="contacts.html" class="link">Контакти</a></li>
+						<li><a href="index.html" style="color:white">Процесс</a></li>
+						<li><a href="index.html" style="color:white">Услуги</a></li>
+						<li><a href="index.html" style="color:white">Гарантии</a></li>
+						<li><a href="index.html" style="color:white">Обо мне</a></li>
+						<li><a href="catalog.html" style="color:white">Как мы работаем</a></li>
+						<li><a href="about.html" style="color:white">Отзывы</a></li>
+						<li><a href="contacts.html" style="color:white">Контакты</a></li>
 					</ul>
 				</nav>
 
+				<div class="header__post">
+					<h2>+7(917)<span>515-55-55</span></h2>
+					<h5>Заказать звонок</h5>
+				</div>
+
 			</div>
 		</div>
+		<hr size="1px" color="white">
 	</header>
 
 	<main class="main">
 
-		<section class="header--content section" style="background-image: url(img/header-bg.jpg);">
+		<section class="header--content section">
 			<div class="container">
-				<div class="grid">
+				<!-- <div class="grid">
 					<div class="grid-item">...</div>
 					<div class="grid-item grid-item--width2">...</div>
 					<div class="grid-item grid-item--width3">...</div>
 					<div class="grid-item grid-item--width4">...</div>
 					<div class="grid-item grid-item--width2">...</div>
 					<div class="grid-item grid-item--width3">...</div>
-				</div>
+				</div> -->
 			</div>
 		</section>
 
