--- a/app/index.html
+++ b/app/index.html
@@ -43,17 +43,14 @@
 					</ul>
 				</nav>
 				<div class="header-callback">
-					<strong><span>+7 (917) </span>515-55-55</strong>
-					<h5>Заказать звонок</h5>
+					<strong><a href="#"><span>+7 (917) </span>515-55-55</a></strong>
+					<a href="#" class="order_open header-callback-order">Заказать звонок</a>
 				</div>
 			</div>
 		</div>
 
 	</header>
 
-	<!-- <section class="title-image">
-		<section class="hero"></section>
-	</section> -->
 
 	<main class="main">
 
@@ -63,7 +60,7 @@
 				<div class="hero__content">
 					<img class="man" src="img/man.png" alt="lawyer">
 
-					<p class="hero-title">С ВИСОТЫ МНОГОЛЕТНЕГО ОПЫТА <br>НАХОЖУ <span class="hero-span">ЛУЧШИЕ ПРАВОВЫЕ РЕШЕНИЯ</span></p>
+					<p class="hero-title">С ВИСОТЫ МНОГОЛЕТНЕГО ОПЫТА <br>НАХОЖУ <span>ЛУЧШИЕ ПРАВОВЫЕ РЕШЕНИЯ</span></p>
 					<ul class="hero-subtitle">
 						<li class="hero-subtitle__item">Правелиные и вовремя предпринятые действия - моя работа</li>
 						<li class="hero-subtitle__item">Сохраняйте своих детей, имущество и время!</li>
@@ -92,7 +89,7 @@
 		<section class="whywe">
 			<div class="container">
 				<div class="whywe-content">
-					<h2 class="whywe-title"><span class="whywe-title-span">Почему мы, </span>преимущества нашей компании</h2>
+					<h2 class="whywe-title"><span>Почему мы, </span>преимущества нашей компании</h2>
 					<div class="row">
 						<div class="col-lg-3">
 							<div class="whywe-item">
@@ -139,20 +136,14 @@
 		<section class="consultation">
 			<div class="container">
 				<div class="consultation-content">
-					<p class="consultation-title"><span class="consultation-title-span"> Мы понимаем, </span>что у вас больше вопросов, чем ответов</p>
+					<p class="consultation-title"><span> Мы понимаем, </span>что у вас больше вопросов, чем ответов</p>
 					<p class="consultation-subtitle">
-						Оставьте заявку на бесплатную консультацию, и наш специалист ответит на все ваши вопросы
-					</p>
-					<div class="consultation-form">
-						<form class="form" action="#">
-							<div class="form-wrap">
-								<input required placeholder="12" value="123" type="text">
-							</div>
-							<input type="text" class="form-controol" placeholder="Введите ваше имя">
-							<input type="text" class="form-controol" placeholder="Введите ваш телефон">
-							<input type="submit" class="btn btn-primary" value="Получить консультацию">
-						</form>
-					</div>
+						Оставьте заявку на бесплатную консультацию, и наш специалист ответит на все ваши вопросы</p>
+					<form class="consultation-form" action="#">
+						<input type="text" class="consultation-form-input" placeholder="Введите ваше имя">
+						<input type="tel" class="consultation-form-input" placeholder="Введите ваш телефон">
+						<input type="submit" class="btn btn-primary" value="Получить консультацию">
+					</form>
 				</div>
 			</div>
 		</section>
@@ -372,6 +363,126 @@
 			</div>
 		</section>
 
+		<section class="question">
+			<div class="container">
+				<div class="row justify-content-end">
+					<div class="col-lg-6">
+						<div class="question--content">
+							<p class="question-title">Задайте вопрос юристу!</p>
+							<p class="question-subtitle">Если надоело искать информацию, отправьте нам запрос и получите бесплатную консультацию юриста.</p>
+							<form action="#" class="question-form">
+								<input type="text" class="question-name" placeholder="Введите ваше имя">
+								<input type="text" class="question-tel"placeholder="Введите ваш телефон">
+								<input type="text" class="question-text"placeholder="Введите ваш вопрос">
+								<input type="submit" class="btn" value="ЗАДАТЬ ВОПРОС">
+							</form>
+						</div>
+					</div> 
+				</div>
+			</div>
+		</section>
+
+		<section class="history">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-6">
+						<div class="history-content">
+							<h2 class="history-title">История создания<span class="history-span"> агентства</span></h2>
+							<p class="history-subtitle">Давайте знакомиться!</p>
+							<p class="history-text">Юридическое агентство было создано в 2004г. с узкой специализацией Семейного права.  До настоящего момента, компания реорганизовывалась и сегодня я являюсь единственным учредителем данной организации. Мой первый опыт юридического стажа был получен помощником судьи.  За многолетнюю практику, мною был получен громадный и бесценный опыт в разных структурах юридической направленности. Практика в судах со многими известными адвокатами по Семейному праву, мне очень помогла понять проблемы клиентов и выработать для себя постулаты решения семейных споров. За время работы нашим агентством проведено более 1470 успешных дел.  Наши доверители к нам обращаются вновь, и мы всегда готовы им помочь.</p>
+							<p class="history-posttext">Мы заинтересованы в вашем обращении и поэтому, обратившись       к нам мы сделаем все возможное,  чтобы ваши пожелания были оправданы и с благодарностью вспоминали о нас.</p>
+							<div class="row justify-content-end">
+								<div class="col-lg-6">
+									<div class="history-sign">С Уважением! Фролов А.М.</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-6">
+						<img src="img/history.jpg" alt="picture" class="history-img" >
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="howwork">
+			<div class="container">
+				<div class="howwork-content">
+					<h2 class="howwork-title"><span class="howwork-span">Как </span>мы работаем?</h2>
+					<div class="howwork-items">
+						<div class="howwork-item">
+							<img src="howwork-1.png" alt="" class="howwork-item__img">
+							<p class="howwork-item__title">Получение заявки</p>
+							<p class="howwork-item__subtitle">Подбор профильного специалиста. </p>
+							<p class="howwork-item__posttitle">возможно выезд к клиенту</p>
+						</div>
+						<div class="howwork-item">
+							<img src="howwork-2.png" alt="" class="howwork-item__img">
+							<p class="howwork-item__title">Обработка  полученных документов</p>
+							<p class="howwork-item__subtitle">Изучение судебной практики. Анализ перпективы решения спора </p>
+						</div>
+						<div class="howwork-item">
+							<img src="howwork-3.png" alt="" class="howwork-item__img">
+							<p class="howwork-item__title">Согласование условий 
+							сотрудничества</p>
+							<p class="howwork-item__subtitle">Согласование условий сотрудничества с доверителем. Обсуждение  условия работы </p>
+						</div>
+						<div class="howwork-item">
+							<img src="howwork-4.png" alt="" class="howwork-item__img">
+							<p class="howwork-item__title">Подписание
+							договора</p>
+							<p class="howwork-item__subtitle">Информирование доверителя на всех этапах судебного разбирательства. Получение решение суда наруки</p>
+						</div>
+						<div class="howwork-item">
+							<img src="howwork-5.png" alt="" class="howwork-item__img">
+							<p class="howwork-item__title">Решение вопроса</p>
+							<p class="howwork-item__subtitle">Решение вопросов в суде является достаточно сложным и трудоемким процессом. Мы гарантируем только положительный результат</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="review">
+			<div class="container">
+				<div class="review-content">
+					<h2 class="review-title"><span class="review-span">Отзывы </span>клиентов</h2>
+					<div class="review-slider">
+						
+
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="top7">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-7">
+						<div class="top7-content">
+							<h2 class="top7-title"><span class="top7-span">Топ 7 вопросов, </span>которые нам часто задают</h2>
+							<ul class="top7-items">
+								<li class="top7-item">Какие документы нужны для оформления ?</li>
+								<li class="top7-item">Как подать заявление?</li>
+								<li class="top7-item">Какие будут последствия?</li>
+								<li class="top7-item">Какие документы нужны для оформления ?</li>
+								<li class="top7-item">5</li>
+								<li class="top7-item">6</li>
+								<li class="top7-item">7</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-lg-5">
+						
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="map">
+			
+		</section>
+
 	</main>
 
 	<footer class="footer">
@@ -391,8 +502,8 @@
 				<input type="hidden" name="subject" value="Узнать подробнее!">
 				<div class="footer__form_line"><input type="text" name="name" placeholder="Имя" required></div>
 				<div class="footer__form_line"><input type="tel" name="phone" required placeholder="Телефон" pattern="\+7\s\([0-9]{3}\)\s[0-9]{3}-[0-9]{2}-[0-9]{2}"></div>
-				<div><button type="submit" class="btn footer__form_btn" name="submit" value="отправить">Отправить</button></div>
-				<p>Нажимая на кнопку, вы даете согласие <br>на обработку своих <a href="#" target="_blank">персональных данных</a></p>
+				<div class="wrap-form-btn"><button type="submit" class="btn footer__form_btn" name="submit" value="отправить">Отправить</button></div>
+				<p>Нажимая на кнопку, вы даете согласие на обработку своих <a class="modal-personal" href="#" target="_blank">персональных данных</a></p>
 
 			</form>
 		</div>
