--- a/app/index.html
+++ b/app/index.html
@@ -138,7 +138,7 @@
 				<div class="consultation-content">
 					<p class="consultation-title"><span> Мы понимаем, </span>что у вас больше вопросов, чем ответов</p>
 					<p class="consultation-subtitle">
-						Оставьте заявку на бесплатную консультацию, и наш специалист ответит на все ваши вопросы</p>
+					Оставьте заявку на бесплатную консультацию, и наш специалист ответит на все ваши вопросы</p>
 					<form class="consultation-form" action="#">
 						<input type="text" class="consultation-form-input" placeholder="Введите ваше имя">
 						<input type="tel" class="consultation-form-input" placeholder="Введите ваш телефон">
@@ -158,7 +158,7 @@
 								<div class="decide-item-wrap">
 									<img class="decide-item__img" src="img/decide-1.png" alt="#" width="48px" height="40px">
 									<p class="decide-item__title">
-											Расторжение брака
+										Расторжение брака
 									</p>
 								</div>
 								<p class="decide-item__subtitle">
@@ -367,14 +367,43 @@
 			<div class="container">
 				<div class="row justify-content-end">
 					<div class="col-lg-6">
-						<div class="question--content">
+						<div class="question-content">
 							<p class="question-title">Задайте вопрос юристу!</p>
 							<p class="question-subtitle">Если надоело искать информацию, отправьте нам запрос и получите бесплатную консультацию юриста.</p>
 							<form action="#" class="question-form">
-								<input type="text" class="question-name" placeholder="Введите ваше имя">
-								<input type="text" class="question-tel"placeholder="Введите ваш телефон">
-								<input type="text" class="question-text"placeholder="Введите ваш вопрос">
-								<input type="submit" class="btn" value="ЗАДАТЬ ВОПРОС">
+								<div class="form-wrap">
+									<div class="form-wrap__col">
+										<div class="question-input-wrap">
+											<input type="text" class="question-input" placeholder="Введите ваше имя">										
+										</div>
+										<div class="question-input-wrap">
+											<input type="tel" class="question-input" placeholder="Введите ваш телефон">										
+										</div>
+									</div>
+									<div class="form-wrap__col">
+										<textarea class="question-input" name="#" id="" cols="30" rows="6" placeholder="Введите ваш вопрос"></textarea>
+									</div>
+									<!-- <div class="w-100"></div> -->
+									<div class="form-wrap__col">
+										<input type="submit" class="btn btn-primary" value="ЗАДАТЬ ВОПРОС">
+									</div>
+									<div class="form-wrap__col"></div>
+								</div>
+								<!-- <div class="question-form-wrap">
+									<div class="question-input-wrap">
+										<input type="text" class="question-input" placeholder="Введите ваше имя">										
+									</div>
+									<div class="question-input-wrap">
+										<input type="tel" class="question-input" placeholder="Введите ваш телефон">										
+									</div>
+								</div>
+								<div class="question-form-wrap">
+									
+								</div>
+								<div class="question-form-wrap">
+									<input type="submit" class="btn btn-primary" value="ЗАДАТЬ ВОПРОС">
+								</div>
+								<div class="question-form-wrap"></div> -->
 							</form>
 						</div>
 					</div> 
@@ -389,12 +418,23 @@
 						<div class="history-content">
 							<h2 class="history-title">История создания<span class="history-span"> агентства</span></h2>
 							<p class="history-subtitle">Давайте знакомиться!</p>
-							<p class="history-text">Юридическое агентство было создано в 2004г. с узкой специализацией Семейного права.  До настоящего момента, компания реорганизовывалась и сегодня я являюсь единственным учредителем данной организации. Мой первый опыт юридического стажа был получен помощником судьи.  За многолетнюю практику, мною был получен громадный и бесценный опыт в разных структурах юридической направленности. Практика в судах со многими известными адвокатами по Семейному праву, мне очень помогла понять проблемы клиентов и выработать для себя постулаты решения семейных споров. За время работы нашим агентством проведено более 1470 успешных дел.  Наши доверители к нам обращаются вновь, и мы всегда готовы им помочь.</p>
-							<p class="history-posttext">Мы заинтересованы в вашем обращении и поэтому, обратившись       к нам мы сделаем все возможное,  чтобы ваши пожелания были оправданы и с благодарностью вспоминали о нас.</p>
-							<div class="row justify-content-end">
-								<div class="col-lg-6">
-									<div class="history-sign">С Уважением! Фролов А.М.</div>
+
+							
+							<div class="scrollbar-wrap">
+
+								<div id="scrollbar-container">
+									<div id="scrollbar"></div>
 								</div>
+								<div id="content" class="scroll-history">
+									<p class="history-text">Юридическое агентство было создано в 2004г. с узкой специализацией Семейного права.  До настоящего момента, компания реорганизовывалась и сегодня я являюсь единственным учредителем данной организации. Мой первый опыт юридического стажа был получен помощником судьи.  За многолетнюю практику, мною был получен громадный и бесценный опыт в разных структурах юридической направленности. Практика в судах со многими известными адвокатами по Семейному праву, мне очень помогла понять проблемы клиентов и выработать для себя постулаты решения семейных споров. За время работы нашим агентством проведено более 1470 успешных дел.  Наши доверители к нам обращаются вновь, и мы всегда готовы им помочь.
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est laboriosam voluptas mollitia ratione debitis voluptatibus quia inventore ea cumque laborum laudantium, ipsum, maiores eum. Ab dolor, accusantium fugit, rem nesciunt laudantium dicta nulla ipsum. Sint nobis aspernatur laborum. Dolore voluptatibus natus aliquam eveniet, tempore ut animi, et eum rem quos.
+									lorem1000
+
+								</p>
+									<p class="history-posttext">Мы заинтересованы в вашем обращении и поэтому, обратившись       к нам мы сделаем все возможное,  чтобы ваши пожелания были оправданы и с благодарностью вспоминали о нас.</p>
+									<p class="history-sign">С Уважением! Фролов А.М.</p>
+								</div>
+
 							</div>
 						</div>
 					</div>
@@ -411,30 +451,30 @@
 					<h2 class="howwork-title"><span class="howwork-span">Как </span>мы работаем?</h2>
 					<div class="howwork-items">
 						<div class="howwork-item">
-							<img src="howwork-1.png" alt="" class="howwork-item__img">
+							<img src="img/howwork-1-0.png" alt="" class="howwork-item__img">
 							<p class="howwork-item__title">Получение заявки</p>
 							<p class="howwork-item__subtitle">Подбор профильного специалиста. </p>
 							<p class="howwork-item__posttitle">возможно выезд к клиенту</p>
 						</div>
 						<div class="howwork-item">
-							<img src="howwork-2.png" alt="" class="howwork-item__img">
+							<img src="img/howwork-2-0.png" alt="" class="howwork-item__img">
 							<p class="howwork-item__title">Обработка  полученных документов</p>
 							<p class="howwork-item__subtitle">Изучение судебной практики. Анализ перпективы решения спора </p>
 						</div>
 						<div class="howwork-item">
-							<img src="howwork-3.png" alt="" class="howwork-item__img">
+							<img src="img/howwork-3-0.png" alt="" class="howwork-item__img">
 							<p class="howwork-item__title">Согласование условий 
 							сотрудничества</p>
 							<p class="howwork-item__subtitle">Согласование условий сотрудничества с доверителем. Обсуждение  условия работы </p>
 						</div>
 						<div class="howwork-item">
-							<img src="howwork-4.png" alt="" class="howwork-item__img">
+							<img src="img/howwork-4-0.png" alt="" class="howwork-item__img">
 							<p class="howwork-item__title">Подписание
 							договора</p>
 							<p class="howwork-item__subtitle">Информирование доверителя на всех этапах судебного разбирательства. Получение решение суда наруки</p>
 						</div>
 						<div class="howwork-item">
-							<img src="howwork-5.png" alt="" class="howwork-item__img">
+							<img src="img/howwork-5-0.png" alt="" class="howwork-item__img">
 							<p class="howwork-item__title">Решение вопроса</p>
 							<p class="howwork-item__subtitle">Решение вопросов в суде является достаточно сложным и трудоемким процессом. Мы гарантируем только положительный результат</p>
 						</div>
