--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 	<header class="header">
 
 		<div class="container">
-			<div class="header__container">
+			<div class="header-container">
 				<div class="header-logo">
 					<h1 class="header-logo__title">ЮРИДИЧЕСКОЕ АГЕНСТВО</h1>
 					<span class="header-logo__subtitle">Бракоразводный процесс с 2004г.</span>
@@ -33,18 +33,18 @@
 				</button>
 				<nav class="header-nav">
 					<ul class="nav">
-						<li class="nav__item"><a href="#">Процесс</a></li>
-						<li class="nav__item"><a href="#">Услуги</a></li>
-						<li class="nav__item"><a href="#">Гарантии</a></li>
-						<li class="nav__item"><a href="#">Обо мне</a></li>
-						<li class="nav__item"><a href="#">Как мы работаем</a></li>
-						<li class="nav__item"><a href="#">Отзывы</a></li>
-						<li class="nav__item"><a href="#">Контакты</a></li>
+						<li class="nav-item"><a href="#">Процесс</a></li>
+						<li class="nav-item"><a href="#">Услуги</a></li>
+						<li class="nav-item"><a href="#">Гарантии</a></li>
+						<li class="nav-item"><a href="#">Обо мне</a></li>
+						<li class="nav-item"><a href="#">Как мы работаем</a></li>
+						<li class="nav-item"><a href="#">Отзывы</a></li>
+						<li class="nav-item"><a href="#">Контакты</a></li>
 					</ul>
 				</nav>
 				<div class="header-callback">
-					<strong class="order_open"><a href="#"><span>&#43;7 (917) </span>515-55-55</a></strong>
-					<a href="#" class="order_open header-callback-order">Заказать звонок</a>
+					<strong class="order_open header-callback__tel"><a href="#"><span>&#43;7 (917) </span>515-55-55</a></strong>
+					<a href="#" class="order_open header-callback__order">Заказать звонок</a>
 				</div>
 			</div>
 		</div>
@@ -56,15 +56,17 @@
 		<section class="hero">
 			<div class="container">
 
-				<div class="hero__content">
-					<img class="man" src="img/man.png" alt="lawyer">
+				<div class="hero-content">
+					<img class="man" src="img/man.png" alt="lawyer" width="478px" height="672px">
 
-					<p class="hero-title">С ВИСОТЫ МНОГОЛЕТНЕГО ОПЫТА <br>НАХОЖУ <span>ЛУЧШИЕ ПРАВОВЫЕ РЕШЕНИЯ</span></p>
-					<ul class="hero-subtitle">
-						<li class="hero-subtitle__item">&#8212; Правелиные и вовремя предпринятые действия - моя работа</li>
-						<li class="hero-subtitle__item">&#8212; Сохраняйте своих детей, имущество и время!</li>
-					</ul>
-					<button class="btn hero-btn">СРОЧНО ПОЛУЧИТЬ ОТВЕТ</button>
+					<div class="hero-content-wrap">
+						<p class="hero-title">С ВИСОТЫ МНОГОЛЕТНЕГО ОПЫТА <br>НАХОЖУ <span>ЛУЧШИЕ ПРАВОВЫЕ РЕШЕНИЯ</span></p>
+						<ul class="hero-subtitle">
+							<li class="hero-subtitle__item"> Правелиные и вовремя предпринятые действия - моя работа</li>
+							<li class="hero-subtitle__item"> Сохраняйте своих детей, имущество и время!</li>
+						</ul>
+						<button class="btn hero-btn order_open">СРОЧНО ПОЛУЧИТЬ ОТВЕТ</button>
+					</div>
 
 					<div class="hero-benefits">
 						<div class="hero-benefits-item">
@@ -642,13 +644,13 @@
 					<p class="footer-menu-title">Меню</p>
 					<nav class="footer-menu-nav">
 						<ul class="nav">
-							<li class="nav__item"><a href="#">Процесс</a></li>
-							<li class="nav__item"><a href="#">Услуги</a></li>
-							<li class="nav__item"><a href="#">Гарантии</a></li>
-							<li class="nav__item"><a href="#">Обо мне</a></li>
-							<li class="nav__item"><a href="#">Как мы работаем</a></li>
-							<li class="nav__item"><a href="#">Отзывы</a></li>
-							<li class="nav__item"><a href="#">Контакты</a></li>
+							<li class="nav-item"><a href="#">Процесс</a></li>
+							<li class="nav-item"><a href="#">Услуги</a></li>
+							<li class="nav-item"><a href="#">Гарантии</a></li>
+							<li class="nav-item"><a href="#">Обо мне</a></li>
+							<li class="nav-item"><a href="#">Как мы работаем</a></li>
+							<li class="nav-item"><a href="#">Отзывы</a></li>
+							<li class="nav-item"><a href="#">Контакты</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -677,11 +679,11 @@
 
 				<button class="close order_close" type="button"></button>
 
-				<h3>Оставьте заявку, <br>мы свяжемся с Вами</h3>
+				<h3>Оставьте заявку, мы свяжемся с Вами</h3>
 				<input type="hidden" name="subject" value="Узнать подробнее!">
 				<div class="footer__form_line"><input type="text" name="name" placeholder="Имя" required></div>
 				<div class="footer__form_line"><input type="tel" name="phone" required placeholder="Телефон" pattern="\+7\s\([0-9]{3}\)\s[0-9]{3}-[0-9]{2}-[0-9]{2}"></div>
-				<div class="wrap-form-btn"><button type="submit" class="btn footer__form_btn" name="submit" value="отправить">Отправить</button></div>
+				<button type="submit" class="btn-hollow footer__form_btn" name="submit" value="отправить">Отправить</button>
 				<p>Нажимая на кнопку, вы даете согласие на обработку своих <a class="modal-personal" href="#" target="_blank">персональных данных</a></p>
 
 			</form>
