adaptive for 2nd section

--- a/app/index.html
+++ b/app/index.html
@@ -92,7 +92,7 @@
 				<div class="whywe-content">
 					<h2 class="whywe-title"><span>Почему мы, </span>преимущества нашей компании</h2>
 					<div class="row">
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-6 col-sm-6 col-12">
 							<div class="whywe-item">
 								<div class="whywe-wrap">
 									<img src="img/whywe-1.jpg" alt="PICTURE" class="whywe-item__img" width="270px" height="170px">
@@ -101,7 +101,7 @@
 								<p class="whywe-item__subtitle">Мы дорожим каждым обратившемся клиентом. Доверие проверенное временем с 2004г.</p>
 							</div>
 						</div>
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-6 col-sm-6 col-12">
 							<div class="whywe-item">
 								<div class="whywe-wrap">
 									<img src="img/whywe-2.jpg" alt="PICTURE" class="whywe-item__img" width="270px" height="170px">
@@ -110,7 +110,7 @@
 								<p class="whywe-item__subtitle">Штат юристов и адвокатов из ведущих  юридических университетов. Их практика и опыт складывался из самых важных и неразрешимых задач.</p>
 							</div>
 						</div>
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-6 col-sm-6 col-12">
 							<div class="whywe-item">
 								<div class="whywe-wrap">
 									<img src="img/whywe-3.jpg" alt="PICTURE" class="whywe-item__img" height="170px">
@@ -119,7 +119,7 @@
 								<p class="whywe-item__subtitle">Нам доверяют  СМИ. Интервью юристов публикуются в газетах и журналах по юридической тематике</p>
 							</div>
 						</div>
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-6 col-sm-6 col-12">
 							<div class="whywe-item">
 								<div class="whywe-wrap">
 									<img src="img/whywe-4.jpg" alt="PICTURE" class="whywe-item__img" width="270px" height="170px">
