adaptive first half

--- a/app/index.html
+++ b/app/index.html
@@ -143,7 +143,7 @@
 					<form class="consultation-form" action="#">
 						<input type="text" class="consultation-form-input" placeholder="Введите ваше имя">
 						<input type="tel" class="consultation-form-input" placeholder="Введите ваш телефон">
-						<input type="submit" class="btn btn-primary" value="Получить консультацию">
+						<input type="submit" class="btn btn-primary consultation-form-btn" value="Получить консультацию">
 					</form>
 				</div>
 			</div>
@@ -167,7 +167,7 @@
 								</p>
 							</div>
 						</div>
-						<div class="col-lg-4">
+						<div class="col-lg-4 ">
 							<div class="decide-item">
 								<div class="decide-item-wrap">
 									<img class="decide-item__img" src="img/decide-2.png" alt="#" width="42px" height="40px">
@@ -180,7 +180,7 @@
 								</p>
 							</div>
 						</div>
-						<div class="col-lg-4">
+						<div class="col-lg-4 ">
 							<div class="decide-item">
 								<div class="decide-item-wrap">
 									<img class="decide-item__img" src="img/decide-3.png" alt="#" width="34px" height="40px">
@@ -193,7 +193,7 @@
 								</p>
 							</div>
 						</div>
-						<div class="col-lg-4">
+						<div class="col-lg-4 ">
 							<div class="decide-item">
 								<div class="decide-item-wrap">
 									<img class="decide-item__img" src="img/decide-4.png" alt="#" width="40px" height="40px">
@@ -206,7 +206,7 @@
 								</p>
 							</div>
 						</div>
-						<div class="col-lg-4">
+						<div class="col-lg-4 ">
 							<div class="decide-item">
 								<div class="decide-item-wrap">
 									<img class="decide-item__img" src="img/decide-5.png" alt="#" width="40px" height="40px">
@@ -219,7 +219,7 @@
 								</p>
 							</div>
 						</div>
-						<div class="col-lg-4">
+						<div class="col-lg-4 ">
 							<div class="decide-item">
 								<div class="decide-item-wrap">
 									<img class="decide-item__img" src="img/decide-6.png" alt="#" width="50px" height="40px">
@@ -232,7 +232,7 @@
 								</p>
 							</div>
 						</div>
-						<div class="col-lg-4">
+						<div class="col-lg-4 ">
 							<div class="decide-item">
 								<div class="decide-item-wrap">
 									<img class="decide-item__img" src="img/decide-7.png" alt="#" width="44px" height="40px">
@@ -245,7 +245,7 @@
 								</p>
 							</div>
 						</div>
-						<div class="col-lg-4">
+						<div class="col-lg-4 ">
 							<div class="decide-item">
 								<div class="decide-item-wrap">
 									<img class="decide-item__img" src="img/decide-8.png" alt="#" width="39px" height="40px">
@@ -258,7 +258,7 @@
 								</p>
 							</div>
 						</div>
-						<div class="col-lg-4">
+						<div class="col-lg-4 ">
 							<div class="decide-item">
 								<div class="decide-item-wrap">
 									<img class="decide-item__img" src="img/decide-9.png" alt="#" width="31px" height="40px">
@@ -279,7 +279,7 @@
 		<section class="cost">
 			<div class="container">
 				<div class="row justify-content-center">
-					<div class="col-10">
+					<div class="col-lg-10 col-md-11">
 						<div class="cost-content">
 							<h2 class="cost-title"><span class="cost-span">СТОИМОСТЬ </span>НАШИХ УСЛУГ</h2>
 							<div class="cost-wrap">
@@ -291,7 +291,7 @@
 								</div>
 								<p class="cost-item__subtitle">(заявлений, жалоб, претензий, обращений, искового заявления, отзыва на иск,<br> возражения на иск, апелляционной, кассационной и надзорной жалобы и пр.)</p>
 								<div class="cost-item">
-									<p class="cost-item__title">Представление (защита) интересов в суде</p><span class="cost-item-span"></span><p class="cost-item__title">от 20 000 руб.</p>
+									<p class="cost-item__title cost-item__title--hide">Представление (защита) интересов в суде</p><span class="cost-item__title cost-item__title2">Защита интересов</span><span class="cost-item-span"></span><p class="cost-item__title">от 20 000 руб.</p>
 								</div>
 							</div>
 						</div>
@@ -305,25 +305,25 @@
 				<div class="guarantees-content">
 					<h2 class="guarantees-title"><span class="guarantees-span">Наши </span>гарантии</h2>
 					<div class="row justify-content-center">
-						<div class="col-lg-4">
+						<div class="col-lg-4 col-md-6">
 							<div class="guarantees-item">
 								<p class="guarantees-item__subtitle">
-									<span class="guarantees-item__span--32"> 12 </span><span class="guarantees-item__span--24">лет <br>безупречной работы</span>
-									Оказываем юридические услуги <br>и боремся за права клиента <br>до полной победы
+									<span class="guarantees-item__span--32"> 12 </span><span class="guarantees-item__span--24">лет <br>безупречной работы<br></span>
+									Оказываем юридические услуги и боремся за права клиента до полной победы
 								</p>
 								<img src="img/guarantees-1.png" alt="#" class="guarantees-item__img" width="43px" height="43px">
 							</div>
 						</div>
-						<div class="col-lg-4">
+						<div class="col-lg-4 col-md-6">
 							<div class="guarantees-item">
 								<p class="guarantees-item__subtitle">
 									<span class="guarantees-item__span--32">Договор </span><br>
-									Мы подписываем договор и второй экземпляр остается у вас. <br><span class="guarantees-item__span--bold">На любом этапе можете <br>расторгнуть договор</span>
+									Мы подписываем договор и второй экземпляр остается у вас. <br><span class="guarantees-item__span--bold">На любом этапе можете расторгнуть договор</span>
 								</p>
 								<img src="img/guarantees-2.png" alt="#" class="guarantees-item__img" width="32px" height="43px">
 							</div>
 						</div>
-						<div class="col-lg-4">
+						<div class="col-lg-4 col-md-6">
 							<div class="guarantees-item">
 								<p class="guarantees-item__subtitle">
 									<span class="guarantees-item__span--32">Оплата </span><br>
@@ -332,25 +332,25 @@
 								<img src="img/guarantees-3.png" alt="#" class="guarantees-item__img" width="44px" height="43px">
 							</div>
 						</div>
-						<div class="col-lg-4">
+						<div class="col-lg-4 col-md-6">
 							<div class="guarantees-item">
 								<p class="guarantees-item__subtitle">
-									<span class="guarantees-item__span--32"> 600 </span><span class="guarantees-item__span--24">сложныйх дел</span>
+									<span class="guarantees-item__span--32"> 600 </span><span class="guarantees-item__span--24">сложных дел</span><br>
 									Выиграны в первой инстанции
 								</p>
 								<img src="img/guarantees-4.png" alt="file" class="guarantees-item__img">
 							</div>
 						</div>
-						<div class="col-lg-4">
+						<div class="col-lg-4 col-md-6">
 							<div class="guarantees-item">
 								<p class="guarantees-item__subtitle">
-									<span class="guarantees-item__span--32"> 460 </span><span class="guarantees-item__span--24">семеных дел </span>
+									<span class="guarantees-item__span--32"> 460 </span><span class="guarantees-item__span--24">семеных дел </span><br>
 									Заключены мировые соглашения
 								</p>
 								<img src="img/guarantees-5.png" alt="family" class="guarantees-item__img">
 							</div>
 						</div>
-						<div class="col-lg-4">
+						<div class="col-lg-4 col-md-6">
 							<div class="guarantees-item">
 								<p class="guarantees-item__subtitle">
 									<span class="guarantees-item__span--24">более <span class="guarantees-item__span--32"> 196 </span>дел </span><br>
