--- a/app/index.html
+++ b/app/index.html
@@ -31,15 +31,15 @@
 						<span class="hamburger__item"></span>
 					</span>
 				</button>
-				<nav class="header-nav">
+				<nav class="header-nav" id="menu">
 					<ul class="nav">
-						<li class="nav-item"><a href="#">Процесс</a></li>
-						<li class="nav-item"><a href="#">Услуги</a></li>
-						<li class="nav-item"><a href="#">Гарантии</a></li>
-						<li class="nav-item"><a href="#">Обо мне</a></li>
-						<li class="nav-item"><a href="#">Как мы работаем</a></li>
-						<li class="nav-item"><a href="#">Отзывы</a></li>
-						<li class="nav-item"><a href="#">Контакты</a></li>
+						<li class="nav-item"><a href="#decide">Процесс</a></li>
+						<li class="nav-item"><a href="#cost">Услуги</a></li>
+						<li class="nav-item"><a href="#guarantees">Гарантии</a></li>
+						<li class="nav-item"><a href="#history">Обо мне</a></li>
+						<li class="nav-item"><a href="#howwork">Как мы работаем</a></li>
+						<li class="nav-item"><a href="#review">Отзывы</a></li>
+						<li class="nav-item"><a href="#maps">Контакты</a></li>
 					</ul>
 				</nav>
 				<div class="header-callback">
@@ -149,7 +149,7 @@
 			</div>
 		</section>
 
-		<section class="decide">
+		<section class="decide" id="decide">
 			<div class="container">
 				<div class="decide-content">
 					<h2 class="decide-title"><span class="decide-title-span">Какие вопросы </span>мы решаем?</h2>
@@ -276,7 +276,7 @@
 			</div>
 		</section>
 
-		<section class="cost">
+		<section class="cost" id="cost">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-lg-10 col-md-11">
@@ -300,7 +300,7 @@
 			</div>
 		</section>
 
-		<section class="guarantees">
+		<section class="guarantees" id="guarantees">
 			<div class="container">
 				<div class="guarantees-content">
 					<h2 class="guarantees-title"><span class="guarantees-span">Наши </span>гарантии</h2>
@@ -367,7 +367,7 @@
 		<section class="question">
 			<div class="container">
 				<div class="row justify-content-end">
-					<div class="col-lg-6">
+					<div class="col-lg-6 col-md-8">
 						<div class="question-content">
 							<p class="question-title">Задайте вопрос юристу!</p>
 							<p class="question-subtitle">Если надоело искать информацию, отправьте нам запрос и получите бесплатную консультацию юриста.</p>
@@ -385,7 +385,7 @@
 										<textarea class="question-input" name="#" id="" cols="30" rows="6" placeholder="Введите ваш вопрос"></textarea>
 									</div>
 									<div class="form-wrap__col">
-										<input type="submit" class="btn btn-primary" value="ЗАДАТЬ ВОПРОС">
+										<input type="submit" class="btn question-btn" value="ЗАДАТЬ ВОПРОС">
 									</div>
 								</div>
 							</form>
@@ -395,7 +395,7 @@
 			</div>
 		</section>
 
-		<section class="history">
+		<section class="history" id="history">
 			<div class="history-bg-right"></div>
 			<div class="container">
 				<div class="row">
@@ -425,7 +425,7 @@
 			</div>
 		</section>
 
-		<section class="howwork">
+		<section class="howwork" id="howwork">
 			<div class="container">
 				<div class="howwork-content">
 					<h2 class="howwork-title"><span class="howwork-span">Как </span>мы работаем?</h2>
@@ -478,11 +478,11 @@
 			</div>
 		</section>
 
-		<section class="review">
+		<section class="review" id="review">
 			<div class="container">
 				<h2 class="review-title"><span class="review-span">Отзывы </span>клиентов</h2>
 				<div class="row justify-content-center">
-					<div class="col-8 review-swiper-wrap">
+					<div class="col-lg-8 col-md-10 review-swiper-wrap">
 						<div class="review-swiper-next">
 							<span class="review-swiper-circle"></span>
 						</div>
@@ -500,17 +500,24 @@
 									</div>
 									<div class="review-slide-content">
 										<span>Отзыв:</span><br><br>
-										<p>C юридической компанией сотрудничаем давно. Уже вот третий раз помогает мне c разными проблемами: был вопрос с оспариванием наследства, писали исковое заявление по защите прав потребителей, ходили в суд по поводу кредита на автомобиль и выиграли. Я лично плохо понимаю юридическую сферу, но прийдя в эту компанию мне все по полочкам разложили, рассказали что и как надо делать. Предложили несколько вариантов действий и развития событий.Все советую и уже вот двое друзей тоже туда ходили по своим вопросам и остались очень довольны! Результат стоит тех денег, которые вы заплатите. Ходила в другие юридические компании - цены большие а толку </p>
+										<p>C юридической компанией сотрудничаем давно. Уже вот третий раз помогает мне c разными проблемами: был вопрос с оспариванием наследства, писали исковое заявление по защите прав потребителей, ходили в суд по поводу кредита на автомобиль и выиграли. Я лично плохо понимаю юридическую сферу, но прийдя в эту компанию мне все по полочкам разложили, рассказали что и как надо делать. Предложили несколько вариантов действий и развития событий. Все советую и уже вот двое друзей тоже туда ходили по своим вопросам и остались очень довольны! Результат стоит тех денег, которые вы заплатите. Ходила в другие юридические компании - цены большие а толку </p>
 									</div>
 								</div>
 								<div class="swiper-slide">
-									12312123
+									<div class="review-slide-title">Lorem ipsum dolor sit amet.
+										<div class="review-slide-title-btn">
+											<button class="btn-hollow">ОСТАВИТЬ ОТЗЫВ</button>
+										</div>
+									</div>
+									<div class="review-slide-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos cum voluptatibus facilis nulla architecto laudantium corporis assumenda, provident tempora fuga.</div>
 								</div>
 								<div class="swiper-slide">
-									34tr45t56u67u
+									<div class="review-slide-title">Lorem ipsum dolor sit amet.</div>
+									<div class="review-slide-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, voluptates iste, possimus, fuga eos sed enim, laboriosam alias aliquid nostrum perspiciatis mollitia expedita. Quos quis ipsa ullam pariatur numquam, a.</div>
 								</div>
 								<div class="swiper-slide">
-									dffdhdhhf
+									<div class="review-slide-title">Lorem ipsum dolor sit amet.</div>
+									<div class="review-slide-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint ipsam laudantium veniam illo error inventore perferendis eius, dolore quas accusantium porro fugit doloribus dignissimos tempora magnam aliquam asperiores iure maiores distinctio cumque blanditiis obcaecati mollitia eum! Cum, quae labore deserunt quis ipsam atque, voluptatem in! Voluptate amet sunt doloremque repellat.</div>
 								</div>	
 							</div>
 						</div>
@@ -524,7 +531,7 @@
 		<section class="top7">
 			<div class="container">
 				<div class="row justify-content-around">
-					<div class="col-lg-7">
+					<div class="col-xl-7 col-lg-6">
 						<div class="top7-content">
 							<h2 class="top7-title"><span>Топ 7 вопросов, <br></span>которые нам часто задают</h2>
 							<div class="top7-acords" id="acc">
@@ -587,9 +594,9 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-1">
+					<div class="col-xl-1 col-lg-1 top7-hide">
 					</div>
-					<div class="col-lg-4">
+					<div class="col-xl-4 col-lg-5 top7-hide">
 						<div class="top7-frame">
 							<img src="img/frame.png" alt="frame" class="top7-frame-img">
 							<div class="swiper-container top7-swiper">
@@ -610,20 +617,20 @@
 			</div>
 		</section>
 
-		<section class="maps">
+		<section class="maps" id="maps">
 			<div id="map"></div>
 			<div class="marker">
 				<div class="marker-item">
 					<div class="marker-contacts">
 						<div class="marker-contacts-title">Контакты</div>
 						<div class="marker-contacts-subtitle"><span class="marker-contacts-subtitle-text">Телефон: </span><span class="marker-contacts-subtitle-tel"><span>&#43;7 (917)</span> 515-55-55</span></div>
-						<button class="marker-contacts-btn btn btn-marker">заказать звонок</button>
+						<button class="marker-contacts-btn btn marker-btn">заказать звонок</button>
 					</div>
 				</div>
 				<div class="marker-item">
 					<div class="marker-adress">
 						<p class="marker-adress-text">Адрес:</p>
-						<p class="marker-adress-adress">Проспект Мира, 105, <br>
+						<p class="marker-adress-subtext">Проспект Мира, 105, <br>
 						строение 1, офис 413</p>
 					</div>
 				</div>
@@ -642,7 +649,7 @@
 				</div>
 				<div class="footer-menu">
 					<p class="footer-menu-title">Меню</p>
-					<nav class="footer-menu-nav">
+					<nav class="footer-menu-nav" id="menu">
 						<ul class="nav">
 							<li class="nav-item"><a href="#">Процесс</a></li>
 							<li class="nav-item"><a href="#">Услуги</a></li>
